--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.14.8",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "concurrently": "^6.2.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
