create admin panel

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 AUTH_URI='mongodb+srv://farkhod:nte.kg_2021@auth.vlfnd.mongodb.net/authData?retryWrites=true&w=majority'
+SESSION_SECRET='khasan-secret-key'
