--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
     "hbs": "^4.1.2",
+    "moment": "^2.29.3",
     "mongoose": "^5.13.5",
-    "normalize.css": "^8.0.1"
+    "multer": "^1.4.5-lts.1",
+    "normalize.css": "^8.0.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
